Communicator section is changed

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<div class="hidden-description">
 						<p>
 							<i class="fa fa-quote-left"></i>
-							During my college years, I founded the <a href="https://www.facebook.com/JASUDC" target="_blank">Japanese American Student Union</a>, which helped me learn how to effectively communicate with others. Additionally, I won 5th place and the audience favorite award at <a href="http://gwu.qualtrics.com/SE/?SID=SV_d5VkyBKwwNZNQBT" target="_blank">George Pitch Competition</a>.
+							During my college years, I founded the <a href="https://www.facebook.com/JASUDC" target="_blank">Japanese American Student Union</a>, which helped me learn how to effectively communicate with others. Additionally, I won 5th Place and the Fan Favorite award at <a href="http://gwu.qualtrics.com/SE/?SID=SV_d5VkyBKwwNZNQBT" target="_blank">GW's Pitch George elevator pitch competition</a>.
 							<i class="fa fa-quote-right"></i>
 						</p>
 					</div>
