IE alert - not optimized for IE is added

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 			document.createElement('video');
 			document.createElement("footer");
 			document.createElement("header");
+			
+			alert('PolliGrid is not optimized for Internet Explore yet. Please use other browsers for the best performance.');
+			
+			script(src='http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js')
+
 		</script>
-	
 	<![endif]-->
 </head>
 <body>
