Chat function added

--- a/index.html
+++ b/index.html
@@ -868,5 +868,9 @@
 	  ga('send', 'pageview');
 
 	</script>
+	<script type="text/javascript">
+  var FHChat = {product_id: "5e6c9f042a57"}
+  FHChat.customAttributes=[];FHChat.sendCustomAttributes=function(data){this.customAttributes.push(data)};!function(){var a,b;return b=document.createElement("script"),a=document.getElementsByTagName("script")[0],b.src="https://chat-client-js.firehoseapp.com/chat-min.js",b.async=!0,a.parentNode.insertBefore(b,a)}();
+</script>
 </body>
 </html>
