details about measur3d added

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<span class="profile-picture"></span>
 			<p>
 				<i class="fa fa-quote-left"></i>
-				My name is Zhengdian Zhan, but people call me "Masa." I am a recent graduate, currently seeking employment opportunities.
+				My name is Zhengdian Zhan, but people call me "Masa." I am currently working for a YC funded startup as a software engineer.
 				<br>
 				<br>
 				I earned my master's degree in information systems technology from George Washington University, and I have been teaching myself a variety of technologies. I have a strong interest in web &amp; software development.
@@ -763,6 +763,21 @@
 	<div id="work" class="pages">
 		<section class="layout">
 			<h2>Work experience</h2>
+			<div class="companies">
+				<h3>Measur3d</h3>
+				<span class="position"> Software Engineer </span>
+				<ul>
+					<li>
+						building the front and back-side web applications
+					</li>
+					<li>
+						Quality assurance for web applications by writing test code for the front and back-end
+					</li>
+					<li>
+						Assistance in designing the feature requirement for products
+					</li>
+				</ul>
+			</div>
 			<div class="companies">
 				<h3>Toyota</h3>
 				<span class="position"> Intern</span>
