--- a/index.html
+++ b/index.html
@@ -873,6 +873,7 @@
 	</footer>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="asset/js/script.js"></script>	
+	<script src="https://embed.small.chat/T376PTA9GG922EM3K7.js" async></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
